--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title:            Qingqi Shi's Blog
 locale:           en_US
-url:              http://qingqi.me
+url:              
 
 
 # Jekyll configuration
